Add pip installs

--- a/axonds1/notebook/AxonDeepSeg.ipynb
+++ b/axonds1/notebook/AxonDeepSeg.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "8a76adda-a8ea-45e3-9756-b9cef835142f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install -q *.whl numpy matplotlib osparc_filecomms"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "8bfb9018-78ef-4601-857c-39274900c37e",
    "metadata": {
