--- a/axonds1/notebook/AxonDeepSeg.ipynb
+++ b/axonds1/notebook/AxonDeepSeg.ipynb
@@ -2,24 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8a76adda-a8ea-45e3-9756-b9cef835142f",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-20T08:34:25.391272Z",
+     "iopub.status.busy": "2024-02-20T08:34:25.390798Z",
+     "iopub.status.idle": "2024-02-20T08:34:26.495041Z",
+     "shell.execute_reply": "2024-02-20T08:34:26.494442Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "pip install -q *.whl numpy matplotlib osparc_filecomms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8bfb9018-78ef-4601-857c-39274900c37e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-19T17:07:34.422358Z",
-     "iopub.status.busy": "2024-02-19T17:07:34.422067Z",
-     "iopub.status.idle": "2024-02-19T17:07:34.685190Z",
-     "shell.execute_reply": "2024-02-19T17:07:34.684651Z"
+     "iopub.execute_input": "2024-02-20T08:34:26.497633Z",
+     "iopub.status.busy": "2024-02-20T08:34:26.497337Z",
+     "iopub.status.idle": "2024-02-20T08:34:26.779111Z",
+     "shell.execute_reply": "2024-02-20T08:34:26.778641Z"
     }
    },
    "outputs": [],
@@ -44,22 +59,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e2605a1d-f182-4fda-9f45-544262567cbd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-19T17:07:34.687336Z",
-     "iopub.status.busy": "2024-02-19T17:07:34.687197Z",
-     "iopub.status.idle": "2024-02-19T17:07:34.689823Z",
-     "shell.execute_reply": "2024-02-19T17:07:34.689440Z"
+     "iopub.execute_input": "2024-02-20T08:34:26.781534Z",
+     "iopub.status.busy": "2024-02-20T08:34:26.781347Z",
+     "iopub.status.idle": "2024-02-20T08:34:26.784313Z",
+     "shell.execute_reply": "2024-02-20T08:34:26.784012Z"
     }
    },
    "outputs": [],
    "source": [
     "osparc_cfg = osparc.Configuration(\n",
     "        host=\"10.43.103.149.nip.io:8006\",\n",
-    "        username=os.environ[\"OSPARC_API_KEY\"],\n",
-    "        password=os.environ[\"OSPARC_API_SECRET\"])\n",
+    "        username=os.environ[\"test_T1QyAxKBUX\"],\n",
+    "        password=os.environ[\"0dsHA6zdYDNEtwNKsXZHBQq8eHuPbd\"])\n",
     "output_dir_path = pl.Path(os.environ['DY_SIDECAR_PATH_OUTPUTS'])\n",
     "output1_dir_path = output_dir_path / 'output_1'\n",
     "\n",
@@ -69,14 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "793b1e44-d92f-47e1-80a5-2aba0a7c71db",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-19T17:07:34.691204Z",
-     "iopub.status.busy": "2024-02-19T17:07:34.691115Z",
-     "iopub.status.idle": "2024-02-19T17:07:34.693062Z",
-     "shell.execute_reply": "2024-02-19T17:07:34.692713Z"
+     "iopub.execute_input": "2024-02-20T08:34:26.786175Z",
+     "iopub.status.busy": "2024-02-20T08:34:26.786039Z",
+     "iopub.status.idle": "2024-02-20T08:34:26.788176Z",
+     "shell.execute_reply": "2024-02-20T08:34:26.787903Z"
     }
    },
    "outputs": [],
@@ -86,14 +101,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "76e4b734-5a52-47b6-baa8-71efa40a11e2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-19T17:07:34.694503Z",
-     "iopub.status.busy": "2024-02-19T17:07:34.694187Z",
-     "iopub.status.idle": "2024-02-19T17:07:34.696308Z",
-     "shell.execute_reply": "2024-02-19T17:07:34.695942Z"
+     "iopub.execute_input": "2024-02-20T08:34:26.790045Z",
+     "iopub.status.busy": "2024-02-20T08:34:26.789777Z",
+     "iopub.status.idle": "2024-02-20T08:34:26.791738Z",
+     "shell.execute_reply": "2024-02-20T08:34:26.791466Z"
     }
    },
    "outputs": [],
@@ -106,14 +121,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "beb0740c-7bd5-4db8-adec-9eb71c646a5d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-19T17:07:34.697557Z",
-     "iopub.status.busy": "2024-02-19T17:07:34.697424Z",
-     "iopub.status.idle": "2024-02-19T17:07:34.699723Z",
-     "shell.execute_reply": "2024-02-19T17:07:34.699381Z"
+     "iopub.execute_input": "2024-02-20T08:34:26.792920Z",
+     "iopub.status.busy": "2024-02-20T08:34:26.792833Z",
+     "iopub.status.idle": "2024-02-20T08:34:26.795019Z",
+     "shell.execute_reply": "2024-02-20T08:34:26.794744Z"
     }
    },
    "outputs": [],
@@ -131,14 +146,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "5f064247-f0d7-4770-b72f-e897af0eb8ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-19T17:07:34.701034Z",
-     "iopub.status.busy": "2024-02-19T17:07:34.700772Z",
-     "iopub.status.idle": "2024-02-19T17:07:34.703266Z",
-     "shell.execute_reply": "2024-02-19T17:07:34.702906Z"
+     "iopub.execute_input": "2024-02-20T08:34:26.796161Z",
+     "iopub.status.busy": "2024-02-20T08:34:26.796075Z",
+     "iopub.status.idle": "2024-02-20T08:34:26.798342Z",
+     "shell.execute_reply": "2024-02-20T08:34:26.798069Z"
     }
    },
    "outputs": [],
@@ -167,14 +182,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "56d096e1-917a-42b5-9131-d56f10396b7d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-19T17:07:34.704614Z",
-     "iopub.status.busy": "2024-02-19T17:07:34.704361Z",
-     "iopub.status.idle": "2024-02-19T17:07:34.706929Z",
-     "shell.execute_reply": "2024-02-19T17:07:34.706582Z"
+     "iopub.execute_input": "2024-02-20T08:34:26.799464Z",
+     "iopub.status.busy": "2024-02-20T08:34:26.799379Z",
+     "iopub.status.idle": "2024-02-20T08:34:26.801879Z",
+     "shell.execute_reply": "2024-02-20T08:34:26.801602Z"
     }
    },
    "outputs": [],
@@ -195,14 +210,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "4fbbc19e-79ce-411c-83a2-962446317536",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-19T17:07:34.708078Z",
-     "iopub.status.busy": "2024-02-19T17:07:34.707986Z",
-     "iopub.status.idle": "2024-02-19T17:07:36.877245Z",
-     "shell.execute_reply": "2024-02-19T17:07:36.876553Z"
+     "iopub.execute_input": "2024-02-20T08:34:26.802985Z",
+     "iopub.status.busy": "2024-02-20T08:34:26.802900Z",
+     "iopub.status.idle": "2024-02-20T08:34:29.005648Z",
+     "shell.execute_reply": "2024-02-20T08:34:29.005003Z"
     }
    },
    "outputs": [],
@@ -212,14 +227,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "aed6eae2-1079-4ffd-a74a-f3fe6fc4906c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-19T17:07:36.879904Z",
-     "iopub.status.busy": "2024-02-19T17:07:36.879714Z",
-     "iopub.status.idle": "2024-02-19T17:07:37.157539Z",
-     "shell.execute_reply": "2024-02-19T17:07:37.157004Z"
+     "iopub.execute_input": "2024-02-20T08:34:29.008034Z",
+     "iopub.status.busy": "2024-02-20T08:34:29.007842Z",
+     "iopub.status.idle": "2024-02-20T08:34:29.295388Z",
+     "shell.execute_reply": "2024-02-20T08:34:29.295052Z"
     }
    },
    "outputs": [
@@ -251,14 +266,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "4879d8b0-fe16-4e9a-b87d-21251976930d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-19T17:07:37.159426Z",
-     "iopub.status.busy": "2024-02-19T17:07:37.159323Z",
-     "iopub.status.idle": "2024-02-19T17:07:37.263429Z",
-     "shell.execute_reply": "2024-02-19T17:07:37.262906Z"
+     "iopub.execute_input": "2024-02-20T08:34:29.297618Z",
+     "iopub.status.busy": "2024-02-20T08:34:29.297522Z",
+     "iopub.status.idle": "2024-02-20T08:34:29.401131Z",
+     "shell.execute_reply": "2024-02-20T08:34:29.400643Z"
     }
    },
    "outputs": [
@@ -283,14 +298,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "12adfdeb-8395-4070-b904-8b64eed26caf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-19T17:07:37.265655Z",
-     "iopub.status.busy": "2024-02-19T17:07:37.265484Z",
-     "iopub.status.idle": "2024-02-19T17:08:00.579196Z",
-     "shell.execute_reply": "2024-02-19T17:08:00.578705Z"
+     "iopub.execute_input": "2024-02-20T08:34:29.403450Z",
+     "iopub.status.busy": "2024-02-20T08:34:29.403275Z",
+     "iopub.status.idle": "2024-02-20T08:34:54.663757Z",
+     "shell.execute_reply": "2024-02-20T08:34:54.663091Z"
     }
    },
    "outputs": [
@@ -298,7 +313,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'Morphometrics': '/tmp/tmpusdcdsiv', 'ProcessedImage': '/tmp/tmpgdicwszd'}, {'Morphometrics': '/tmp/tmpf75_j_dm', 'ProcessedImage': '/tmp/tmpcto5q1f5'}]\n"
+      "[{'Morphometrics': '/tmp/tmpobcm2drw', 'ProcessedImage': '/tmp/tmppq45ywyl'}, {'Morphometrics': '/tmp/tmpzlhqv825', 'ProcessedImage': '/tmp/tmpmsbl3xp8'}]\n"
      ]
     }
    ],
@@ -309,14 +324,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "d2ccedae-e379-40ea-bc37-824cb1e52c92",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-19T17:08:00.581412Z",
-     "iopub.status.busy": "2024-02-19T17:08:00.581174Z",
-     "iopub.status.idle": "2024-02-19T17:08:00.782542Z",
-     "shell.execute_reply": "2024-02-19T17:08:00.782237Z"
+     "iopub.execute_input": "2024-02-20T08:34:54.666067Z",
+     "iopub.status.busy": "2024-02-20T08:34:54.665885Z",
+     "iopub.status.idle": "2024-02-20T08:34:54.856066Z",
+     "shell.execute_reply": "2024-02-20T08:34:54.855632Z"
     }
    },
    "outputs": [
