--- a/axonds1/notebook/AxonDeepSeg.ipynb
+++ b/axonds1/notebook/AxonDeepSeg.ipynb
@@ -6,10 +6,10 @@
    "id": "8a76adda-a8ea-45e3-9756-b9cef835142f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-20T09:49:31.112256Z",
-     "iopub.status.busy": "2024-02-20T09:49:31.112086Z",
-     "iopub.status.idle": "2024-02-20T09:49:32.182394Z",
-     "shell.execute_reply": "2024-02-20T09:49:32.181886Z"
+     "iopub.execute_input": "2024-02-21T16:45:01.483036Z",
+     "iopub.status.busy": "2024-02-21T16:45:01.482864Z",
+     "iopub.status.idle": "2024-02-21T16:45:02.558840Z",
+     "shell.execute_reply": "2024-02-21T16:45:02.558351Z"
     }
    },
    "outputs": [
@@ -31,10 +31,10 @@
    "id": "8bfb9018-78ef-4601-857c-39274900c37e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-20T09:49:32.184895Z",
-     "iopub.status.busy": "2024-02-20T09:49:32.184717Z",
-     "iopub.status.idle": "2024-02-20T09:49:32.454309Z",
-     "shell.execute_reply": "2024-02-20T09:49:32.453836Z"
+     "iopub.execute_input": "2024-02-21T16:45:02.561334Z",
+     "iopub.status.busy": "2024-02-21T16:45:02.561140Z",
+     "iopub.status.idle": "2024-02-21T16:45:02.830199Z",
+     "shell.execute_reply": "2024-02-21T16:45:02.829683Z"
     }
    },
    "outputs": [],
@@ -63,18 +63,18 @@
    "id": "e2605a1d-f182-4fda-9f45-544262567cbd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-20T09:49:32.456682Z",
-     "iopub.status.busy": "2024-02-20T09:49:32.456540Z",
-     "iopub.status.idle": "2024-02-20T09:49:32.459052Z",
-     "shell.execute_reply": "2024-02-20T09:49:32.458736Z"
+     "iopub.execute_input": "2024-02-21T16:45:02.832828Z",
+     "iopub.status.busy": "2024-02-21T16:45:02.832632Z",
+     "iopub.status.idle": "2024-02-21T16:45:02.835286Z",
+     "shell.execute_reply": "2024-02-21T16:45:02.834969Z"
     }
    },
    "outputs": [],
    "source": [
     "osparc_cfg = osparc.Configuration(\n",
     "        host=\"10.43.103.149.nip.io:8006\",\n",
-    "        username=\"test_T1QyAxKBUX\",\n",
-    "        password=\"0dsHA6zdYDNEtwNKsXZHBQq8eHuPbd\")\n",
+    "        username=os.environ[\"OSPARC_API_KEY\"],\n",
+    "        password=os.environ[\"OSPARC_API_SECRET\"])\n",
     "output_dir_path = pl.Path(os.environ['DY_SIDECAR_PATH_OUTPUTS'])\n",
     "output1_dir_path = output_dir_path / 'output_1'\n",
     "\n",
@@ -88,10 +88,10 @@
    "id": "793b1e44-d92f-47e1-80a5-2aba0a7c71db",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-20T09:49:32.460870Z",
-     "iopub.status.busy": "2024-02-20T09:49:32.460695Z",
-     "iopub.status.idle": "2024-02-20T09:49:32.462472Z",
-     "shell.execute_reply": "2024-02-20T09:49:32.462195Z"
+     "iopub.execute_input": "2024-02-21T16:45:02.837218Z",
+     "iopub.status.busy": "2024-02-21T16:45:02.837041Z",
+     "iopub.status.idle": "2024-02-21T16:45:02.838869Z",
+     "shell.execute_reply": "2024-02-21T16:45:02.838575Z"
     }
    },
    "outputs": [],
@@ -105,10 +105,10 @@
    "id": "76e4b734-5a52-47b6-baa8-71efa40a11e2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-20T09:49:32.463620Z",
-     "iopub.status.busy": "2024-02-20T09:49:32.463534Z",
-     "iopub.status.idle": "2024-02-20T09:49:32.465454Z",
-     "shell.execute_reply": "2024-02-20T09:49:32.465167Z"
+     "iopub.execute_input": "2024-02-21T16:45:02.840347Z",
+     "iopub.status.busy": "2024-02-21T16:45:02.840257Z",
+     "iopub.status.idle": "2024-02-21T16:45:02.842161Z",
+     "shell.execute_reply": "2024-02-21T16:45:02.841876Z"
     }
    },
    "outputs": [],
@@ -125,10 +125,10 @@
    "id": "beb0740c-7bd5-4db8-adec-9eb71c646a5d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-20T09:49:32.466646Z",
-     "iopub.status.busy": "2024-02-20T09:49:32.466475Z",
-     "iopub.status.idle": "2024-02-20T09:49:32.468637Z",
-     "shell.execute_reply": "2024-02-20T09:49:32.468343Z"
+     "iopub.execute_input": "2024-02-21T16:45:02.843241Z",
+     "iopub.status.busy": "2024-02-21T16:45:02.843073Z",
+     "iopub.status.idle": "2024-02-21T16:45:02.845232Z",
+     "shell.execute_reply": "2024-02-21T16:45:02.844953Z"
     }
    },
    "outputs": [],
@@ -150,10 +150,10 @@
    "id": "5f064247-f0d7-4770-b72f-e897af0eb8ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-20T09:49:32.469876Z",
-     "iopub.status.busy": "2024-02-20T09:49:32.469716Z",
-     "iopub.status.idle": "2024-02-20T09:49:32.472016Z",
-     "shell.execute_reply": "2024-02-20T09:49:32.471727Z"
+     "iopub.execute_input": "2024-02-21T16:45:02.846279Z",
+     "iopub.status.busy": "2024-02-21T16:45:02.846116Z",
+     "iopub.status.idle": "2024-02-21T16:45:02.848343Z",
+     "shell.execute_reply": "2024-02-21T16:45:02.848052Z"
     }
    },
    "outputs": [],
@@ -186,10 +186,10 @@
    "id": "56d096e1-917a-42b5-9131-d56f10396b7d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-20T09:49:32.473194Z",
-     "iopub.status.busy": "2024-02-20T09:49:32.473041Z",
-     "iopub.status.idle": "2024-02-20T09:49:32.475425Z",
-     "shell.execute_reply": "2024-02-20T09:49:32.475141Z"
+     "iopub.execute_input": "2024-02-21T16:45:02.849409Z",
+     "iopub.status.busy": "2024-02-21T16:45:02.849249Z",
+     "iopub.status.idle": "2024-02-21T16:45:02.851612Z",
+     "shell.execute_reply": "2024-02-21T16:45:02.851332Z"
     }
    },
    "outputs": [],
@@ -214,10 +214,10 @@
    "id": "4fbbc19e-79ce-411c-83a2-962446317536",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-20T09:49:32.476628Z",
-     "iopub.status.busy": "2024-02-20T09:49:32.476467Z",
-     "iopub.status.idle": "2024-02-20T09:49:34.623282Z",
-     "shell.execute_reply": "2024-02-20T09:49:34.622608Z"
+     "iopub.execute_input": "2024-02-21T16:45:02.852628Z",
+     "iopub.status.busy": "2024-02-21T16:45:02.852474Z",
+     "iopub.status.idle": "2024-02-21T16:45:05.093127Z",
+     "shell.execute_reply": "2024-02-21T16:45:05.092442Z"
     }
    },
    "outputs": [],
@@ -231,10 +231,10 @@
    "id": "aed6eae2-1079-4ffd-a74a-f3fe6fc4906c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-20T09:49:34.626057Z",
-     "iopub.status.busy": "2024-02-20T09:49:34.625788Z",
-     "iopub.status.idle": "2024-02-20T09:49:34.904056Z",
-     "shell.execute_reply": "2024-02-20T09:49:34.903599Z"
+     "iopub.execute_input": "2024-02-21T16:45:05.095666Z",
+     "iopub.status.busy": "2024-02-21T16:45:05.095488Z",
+     "iopub.status.idle": "2024-02-21T16:45:05.403155Z",
+     "shell.execute_reply": "2024-02-21T16:45:05.402645Z"
     }
    },
    "outputs": [
@@ -270,10 +270,10 @@
    "id": "4879d8b0-fe16-4e9a-b87d-21251976930d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-20T09:49:34.906193Z",
-     "iopub.status.busy": "2024-02-20T09:49:34.906026Z",
-     "iopub.status.idle": "2024-02-20T09:49:35.010225Z",
-     "shell.execute_reply": "2024-02-20T09:49:35.009577Z"
+     "iopub.execute_input": "2024-02-21T16:45:05.405489Z",
+     "iopub.status.busy": "2024-02-21T16:45:05.405322Z",
+     "iopub.status.idle": "2024-02-21T16:45:05.509702Z",
+     "shell.execute_reply": "2024-02-21T16:45:05.509106Z"
     }
    },
    "outputs": [
@@ -302,10 +302,10 @@
    "id": "12adfdeb-8395-4070-b904-8b64eed26caf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-20T09:49:35.012651Z",
-     "iopub.status.busy": "2024-02-20T09:49:35.012467Z",
-     "iopub.status.idle": "2024-02-20T09:49:57.264937Z",
-     "shell.execute_reply": "2024-02-20T09:49:57.264287Z"
+     "iopub.execute_input": "2024-02-21T16:45:05.512344Z",
+     "iopub.status.busy": "2024-02-21T16:45:05.512165Z",
+     "iopub.status.idle": "2024-02-21T16:45:24.631664Z",
+     "shell.execute_reply": "2024-02-21T16:45:24.631123Z"
     }
    },
    "outputs": [],
@@ -319,10 +319,10 @@
    "id": "d2ccedae-e379-40ea-bc37-824cb1e52c92",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-20T09:49:57.267455Z",
-     "iopub.status.busy": "2024-02-20T09:49:57.267349Z",
-     "iopub.status.idle": "2024-02-20T09:49:57.468537Z",
-     "shell.execute_reply": "2024-02-20T09:49:57.468066Z"
+     "iopub.execute_input": "2024-02-21T16:45:24.634468Z",
+     "iopub.status.busy": "2024-02-21T16:45:24.634217Z",
+     "iopub.status.idle": "2024-02-21T16:45:24.808275Z",
+     "shell.execute_reply": "2024-02-21T16:45:24.807839Z"
     }
    },
    "outputs": [
@@ -361,10 +361,10 @@
    "id": "614a3601-390a-4c4f-9e47-f0e6525b9195",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-20T09:49:57.470576Z",
-     "iopub.status.busy": "2024-02-20T09:49:57.470477Z",
-     "iopub.status.idle": "2024-02-20T09:49:58.577149Z",
-     "shell.execute_reply": "2024-02-20T09:49:58.576790Z"
+     "iopub.execute_input": "2024-02-21T16:45:24.810142Z",
+     "iopub.status.busy": "2024-02-21T16:45:24.810032Z",
+     "iopub.status.idle": "2024-02-21T16:45:25.853901Z",
+     "shell.execute_reply": "2024-02-21T16:45:25.853489Z"
     }
    },
    "outputs": [
