--- a/axonds1/notebook/AxonDeepSeg.ipynb
+++ b/axonds1/notebook/AxonDeepSeg.ipynb
@@ -6,10 +6,10 @@
    "id": "8a76adda-a8ea-45e3-9756-b9cef835142f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T13:43:02.546363Z",
-     "iopub.status.busy": "2024-02-22T13:43:02.545974Z",
-     "iopub.status.idle": "2024-02-22T13:43:03.603478Z",
-     "shell.execute_reply": "2024-02-22T13:43:03.602881Z"
+     "iopub.execute_input": "2024-02-22T14:30:55.999696Z",
+     "iopub.status.busy": "2024-02-22T14:30:55.999515Z",
+     "iopub.status.idle": "2024-02-22T14:30:57.042681Z",
+     "shell.execute_reply": "2024-02-22T14:30:57.042019Z"
     }
    },
    "outputs": [
@@ -27,9 +27,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 2,
    "id": "8bfb9018-78ef-4601-857c-39274900c37e",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-22T14:30:57.045058Z",
+     "iopub.status.busy": "2024-02-22T14:30:57.044863Z",
+     "iopub.status.idle": "2024-02-22T14:30:57.443323Z",
+     "shell.execute_reply": "2024-02-22T14:30:57.442985Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -59,10 +66,10 @@
    "id": "e2605a1d-f182-4fda-9f45-544262567cbd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T13:43:03.979567Z",
-     "iopub.status.busy": "2024-02-22T13:43:03.979263Z",
-     "iopub.status.idle": "2024-02-22T13:43:03.982295Z",
-     "shell.execute_reply": "2024-02-22T13:43:03.981998Z"
+     "iopub.execute_input": "2024-02-22T14:30:57.445757Z",
+     "iopub.status.busy": "2024-02-22T14:30:57.445600Z",
+     "iopub.status.idle": "2024-02-22T14:30:57.448271Z",
+     "shell.execute_reply": "2024-02-22T14:30:57.447988Z"
     }
    },
    "outputs": [],
@@ -85,10 +92,10 @@
    "id": "1015e967-8715-421a-8337-34602b36d9c7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T13:43:03.983962Z",
-     "iopub.status.busy": "2024-02-22T13:43:03.983813Z",
-     "iopub.status.idle": "2024-02-22T13:43:03.985738Z",
-     "shell.execute_reply": "2024-02-22T13:43:03.985428Z"
+     "iopub.execute_input": "2024-02-22T14:30:57.450405Z",
+     "iopub.status.busy": "2024-02-22T14:30:57.450040Z",
+     "iopub.status.idle": "2024-02-22T14:30:57.451791Z",
+     "shell.execute_reply": "2024-02-22T14:30:57.451547Z"
     }
    },
    "outputs": [],
@@ -102,10 +109,10 @@
    "id": "793b1e44-d92f-47e1-80a5-2aba0a7c71db",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T13:43:03.987851Z",
-     "iopub.status.busy": "2024-02-22T13:43:03.987460Z",
-     "iopub.status.idle": "2024-02-22T13:43:03.990444Z",
-     "shell.execute_reply": "2024-02-22T13:43:03.990069Z"
+     "iopub.execute_input": "2024-02-22T14:30:57.453579Z",
+     "iopub.status.busy": "2024-02-22T14:30:57.453428Z",
+     "iopub.status.idle": "2024-02-22T14:30:57.455628Z",
+     "shell.execute_reply": "2024-02-22T14:30:57.455375Z"
     }
    },
    "outputs": [],
@@ -121,10 +128,10 @@
    "id": "76e4b734-5a52-47b6-baa8-71efa40a11e2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T13:43:03.991957Z",
-     "iopub.status.busy": "2024-02-22T13:43:03.991590Z",
-     "iopub.status.idle": "2024-02-22T13:43:03.994821Z",
-     "shell.execute_reply": "2024-02-22T13:43:03.994466Z"
+     "iopub.execute_input": "2024-02-22T14:30:57.456805Z",
+     "iopub.status.busy": "2024-02-22T14:30:57.456667Z",
+     "iopub.status.idle": "2024-02-22T14:30:57.458897Z",
+     "shell.execute_reply": "2024-02-22T14:30:57.458645Z"
     }
    },
    "outputs": [],
@@ -144,10 +151,10 @@
    "id": "b1b15b49-94e2-41ae-9d51-9f55b7eaebc0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T13:43:03.996398Z",
-     "iopub.status.busy": "2024-02-22T13:43:03.995987Z",
-     "iopub.status.idle": "2024-02-22T13:43:03.999833Z",
-     "shell.execute_reply": "2024-02-22T13:43:03.999439Z"
+     "iopub.execute_input": "2024-02-22T14:30:57.460167Z",
+     "iopub.status.busy": "2024-02-22T14:30:57.459899Z",
+     "iopub.status.idle": "2024-02-22T14:30:57.462378Z",
+     "shell.execute_reply": "2024-02-22T14:30:57.462125Z"
     }
    },
    "outputs": [],
@@ -172,10 +179,10 @@
    "id": "beb0740c-7bd5-4db8-adec-9eb71c646a5d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T13:43:04.001423Z",
-     "iopub.status.busy": "2024-02-22T13:43:04.001063Z",
-     "iopub.status.idle": "2024-02-22T13:43:04.004579Z",
-     "shell.execute_reply": "2024-02-22T13:43:04.004068Z"
+     "iopub.execute_input": "2024-02-22T14:30:57.463586Z",
+     "iopub.status.busy": "2024-02-22T14:30:57.463324Z",
+     "iopub.status.idle": "2024-02-22T14:30:57.465483Z",
+     "shell.execute_reply": "2024-02-22T14:30:57.465234Z"
     }
    },
    "outputs": [],
@@ -197,10 +204,10 @@
    "id": "5f064247-f0d7-4770-b72f-e897af0eb8ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T13:43:04.005805Z",
-     "iopub.status.busy": "2024-02-22T13:43:04.005650Z",
-     "iopub.status.idle": "2024-02-22T13:43:04.008873Z",
-     "shell.execute_reply": "2024-02-22T13:43:04.008389Z"
+     "iopub.execute_input": "2024-02-22T14:30:57.466703Z",
+     "iopub.status.busy": "2024-02-22T14:30:57.466444Z",
+     "iopub.status.idle": "2024-02-22T14:30:57.469007Z",
+     "shell.execute_reply": "2024-02-22T14:30:57.468746Z"
     }
    },
    "outputs": [],
@@ -238,10 +245,10 @@
    "id": "56d096e1-917a-42b5-9131-d56f10396b7d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T13:43:04.010144Z",
-     "iopub.status.busy": "2024-02-22T13:43:04.009837Z",
-     "iopub.status.idle": "2024-02-22T13:43:04.012827Z",
-     "shell.execute_reply": "2024-02-22T13:43:04.012319Z"
+     "iopub.execute_input": "2024-02-22T14:30:57.470048Z",
+     "iopub.status.busy": "2024-02-22T14:30:57.469953Z",
+     "iopub.status.idle": "2024-02-22T14:30:57.472312Z",
+     "shell.execute_reply": "2024-02-22T14:30:57.472056Z"
     }
    },
    "outputs": [],
@@ -266,10 +273,10 @@
    "id": "4fbbc19e-79ce-411c-83a2-962446317536",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T13:43:04.013921Z",
-     "iopub.status.busy": "2024-02-22T13:43:04.013778Z",
-     "iopub.status.idle": "2024-02-22T13:43:13.513201Z",
-     "shell.execute_reply": "2024-02-22T13:43:13.512515Z"
+     "iopub.execute_input": "2024-02-22T14:30:57.473506Z",
+     "iopub.status.busy": "2024-02-22T14:30:57.473246Z",
+     "iopub.status.idle": "2024-02-22T14:31:06.927092Z",
+     "shell.execute_reply": "2024-02-22T14:31:06.926552Z"
     }
    },
    "outputs": [],
@@ -279,9 +286,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 12,
    "id": "aed6eae2-1079-4ffd-a74a-f3fe6fc4906c",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-22T14:31:06.930102Z",
+     "iopub.status.busy": "2024-02-22T14:31:06.929543Z",
+     "iopub.status.idle": "2024-02-22T14:31:07.500370Z",
+     "shell.execute_reply": "2024-02-22T14:31:07.499875Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -313,9 +327,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "28145e1d-b953-4b24-919c-fe3afaeb9fce",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-22T14:31:07.504629Z",
+     "iopub.status.busy": "2024-02-22T14:31:07.504506Z",
+     "iopub.status.idle": "2024-02-22T14:31:07.506853Z",
+     "shell.execute_reply": "2024-02-22T14:31:07.506640Z"
+    }
+   },
    "outputs": [],
    "source": [
     "map_inputs = create_map_inputs(uploaded_files, input_metadata_paths)"
@@ -323,14 +344,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "12adfdeb-8395-4070-b904-8b64eed26caf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T13:43:14.078828Z",
-     "iopub.status.busy": "2024-02-22T13:43:14.078654Z",
-     "iopub.status.idle": "2024-02-22T13:44:50.282234Z",
-     "shell.execute_reply": "2024-02-22T13:44:50.281706Z"
+     "iopub.execute_input": "2024-02-22T14:31:07.508212Z",
+     "iopub.status.busy": "2024-02-22T14:31:07.507927Z",
+     "iopub.status.idle": "2024-02-22T14:32:45.714493Z",
+     "shell.execute_reply": "2024-02-22T14:32:45.714078Z"
     }
    },
    "outputs": [
@@ -340,7 +361,7 @@
        "5607"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,14 +374,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "0e770fdd-360f-4a10-9daf-4c821d3601cb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T13:44:50.285240Z",
-     "iopub.status.busy": "2024-02-22T13:44:50.284781Z",
-     "iopub.status.idle": "2024-02-22T13:44:50.287203Z",
-     "shell.execute_reply": "2024-02-22T13:44:50.286928Z"
+     "iopub.execute_input": "2024-02-22T14:32:45.716324Z",
+     "iopub.status.busy": "2024-02-22T14:32:45.715879Z",
+     "iopub.status.idle": "2024-02-22T14:32:45.718471Z",
+     "shell.execute_reply": "2024-02-22T14:32:45.718106Z"
     }
    },
    "outputs": [],
@@ -370,14 +391,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "b956cfbf-79b9-4a93-828a-a8cb793887ca",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T13:44:50.288891Z",
-     "iopub.status.busy": "2024-02-22T13:44:50.288769Z",
-     "iopub.status.idle": "2024-02-22T13:44:50.610247Z",
-     "shell.execute_reply": "2024-02-22T13:44:50.609762Z"
+     "iopub.execute_input": "2024-02-22T14:32:45.720148Z",
+     "iopub.status.busy": "2024-02-22T14:32:45.719800Z",
+     "iopub.status.idle": "2024-02-22T14:32:46.040911Z",
+     "shell.execute_reply": "2024-02-22T14:32:46.040338Z"
     }
    },
    "outputs": [],
@@ -387,9 +408,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 17,
    "id": "d2ccedae-e379-40ea-bc37-824cb1e52c92",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-22T14:32:46.043563Z",
+     "iopub.status.busy": "2024-02-22T14:32:46.043303Z",
+     "iopub.status.idle": "2024-02-22T14:32:46.518802Z",
+     "shell.execute_reply": "2024-02-22T14:32:46.518421Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -421,9 +449,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 18,
    "id": "4a876c7a-9431-466b-94a6-1c969b436007",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-22T14:32:46.523767Z",
+     "iopub.status.busy": "2024-02-22T14:32:46.523624Z",
+     "iopub.status.idle": "2024-02-22T14:32:46.526043Z",
+     "shell.execute_reply": "2024-02-22T14:32:46.525735Z"
+    }
+   },
    "outputs": [],
    "source": [
     "requested_morphometrics = ['axon_diam (um)', 'axon_area (um^2)', 'myelin_thickness (um)', 'myelin_area (um^2)']"
@@ -431,9 +466,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 19,
    "id": "614a3601-390a-4c4f-9e47-f0e6525b9195",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-22T14:32:46.527746Z",
+     "iopub.status.busy": "2024-02-22T14:32:46.527515Z",
+     "iopub.status.idle": "2024-02-22T14:32:49.506980Z",
+     "shell.execute_reply": "2024-02-22T14:32:49.506509Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -487,9 +529,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 20,
    "id": "575226fb-9514-4d20-a864-3973acab0b81",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-22T14:32:49.511790Z",
+     "iopub.status.busy": "2024-02-22T14:32:49.511503Z",
+     "iopub.status.idle": "2024-02-22T14:32:50.018418Z",
+     "shell.execute_reply": "2024-02-22T14:32:50.018143Z"
+    }
+   },
    "outputs": [
     {
      "data": {
